# sabri

./: .coverage  .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: pyproject.toml
backend/src/: main.py  pyproject.toml
backend/src/api/: app.py
backend/src/api/routes/: __init__.py  auth.py  chat.py  dummy.py
backend/src/authentication/: dependencies.py  registry.py  token.py
backend/src/chat/: active_conn_dto.py  connection_manager.py  meta.py
backend/src/config/: events.py  mongo.py
backend/src/database/: chat.py  user.py
backend/src/models/: chat_room.py  message.py  user.py
backend/src/schemas/: auth.py  message.py  token.py  user.py
backend/tests/: .coverage
backend/tests/unit/: test_utils.py
src/chat_app/api/: app.py
src/chat_app/api/routes/: __init__.py  auth.py  chat.py
src/chat_app/authentication/: dependencies.py  oauth.py  registry.py  token.py
src/chat_app/chat/: __init__.py  active_conn_dto.py  connection_manager.py
src/chat_app/config/: mongo.py
src/chat_app/database/: chat.py  user.py
src/chat_app/models/: chat_room.py  user.py
tests/unit/: conftest.py  fixtures.py  test_connection_manager.py  test_utils.py
tests/unit/test_database/: test_chat.py  test_user.py
