[tool.poetry]
name = "realtime-chat-app"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <furkan.ercan@b2metric.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
uvicorn = "^0.23.2"
fastapi = {version = "^0.103.2", extras = ["all"]}
pika = "^1.3.2"
pymongo = "^4.5.0"
python-dotenv = "^1.0.0"
motor = "^3.3.1"
beanie = "^1.23.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
